2003-06-04  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleEncodeString): 
	Fixed memroy leaks

2003-06-03  Mikhael Goikhman  <migo@homemail.com>

	* libs/Makefile.am:
	only FCombineChars.c was distributed not FCombineChars.h

2003-06-03  Marcus Lundblad  <ml@update.uu.se>

	* libs/FCombineChars.c (convert_to_utf8)
	fixed a bug when converting back to UTF-8 and a bug giving
	garbage at end of string in some cases

	* libs/Flocale.c (FlocaleEncodeString)
	fixed problem regarding combining-characters when BIDI is used
	
2003-05-31  Marcus Lundblad  <ml@update.uu.se>

	* libs/Makefile.am:
	* libs/Flocale.c (FlocaleEncodeString):
	* libs/FCombineChars.c:
	* libs/FCombineChars.h:
	implemeted support for combining characters
	
2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	set the version 2.5.8

2003-05-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c:
	* fvwm/fvwm2.1:
	SetEnv with only one parameter is ignored now

2003-05-30  Dan Espen  <dane@mk.telcordia.com>

	* NEWS: Add 2.4.16 news.

2003-05-29  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/functions.c (expand_extended_var):
	(expand):
	fixed expanding variables that are empty, for example $[w.resource]
	or $[gt.a] or $[version.info] or $[EMPTY_STRING]

	* fvwm/fvwm.1.in:
	s/$w/$[w.id]/

2003-05-29  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh.c (ewmh_atom_wm_state):
	Do not claim that we support _NET_WM_STATE_FULLSCREEN

2003-05-28  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	A TaskBar news

2003-05-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/focus.c (__update_windowlist):
	don't fiddle with the window list for windows that are going to be
	destroyed

	* fvwm/add_window.c (delete_client_context):
	(destroy_auxiliary_windows):
	(destroy_window):
	fixed empty frame windows when X reused the window id for a new window
	while the old one was scheduled to be destroyed

2003-05-26  olicha  <olivier.chapuis@free.fr>

	* fvwm/icons.c (GetIconBitmap):